Fix page overflow

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -92,6 +92,7 @@ code {
     color: #ce3512;
     background-color: #f9f2f4;
     border-radius: 4px;
+    overflow-wrap: break-word;
 }
 .table {
   width: 100%;
@@ -182,16 +183,73 @@ code {
 	top: 50px;
 }
 
-@media (max-width: 991px) {
+/*@media (max-width: 991px) {
   .affix {
     position: static;
 	display: block;
 	float:right;
+    top: 50px;
   }
-}
+}*/
 
-@media (min-width:992px) {
+ @media (min-width:992px) {
     .tutorial-sidebar .nav>.active>ul {
     display: block;
 	}
+} 
+
+
+
+@media (max-height: 480px) {
+  .affix {
+    position: fixed;
+    top: 50px;
+  }
+}
+
+/*@media (max-height: 360px) {
+  .affix {
+    position: fixed;
+    top: 20%;
+  }
+}
+*/
+/*.tutorial-sidebar .affix {
+    top: 50px;
+}
+*/
+body {
+  overflow-x: hidden;
+}
+
+[class*='col-'] {
+  float: left;
+  padding-right: $pad;
+  .grid &:last-of-type {
+    padding-right: 0;
+  }
+}
+.col-2-3 {
+  width: 66.66%;
+}
+.col-1-3 {
+  width: 33.33%;
+}
+.col-1-2 {
+  width: 50%;
+}
+.col-1-4 {
+  width: 25%;
+}
+.col-1-8 {
+  width: 12.5%;
+}
+.col-1-12 {
+  width: 8.33%;
+}
+.col-3-4 {
+  width: 75%;
+}
+.col-3-8 {
+  width: 37.5%;
 }
